# MiniCode

./: .env.example  .gitignore  README.md  pyproject.toml
.skills/: add_api.md  code_review.md  input_validation.md  python_test_repair.md  refactor_function.md
minicode/: action_parser.py  agent.py  cli.py  context.py  dreaming.py  eval.py  evolution.py  harness.py  injection.py  llm.py  memory.py  memory_trigger.py  observability.py  permissions.py  policy.py  prompts.py  resume.py  runtime.py  sandbox.py  security.py  session.py  skill_evolution.py  skills.py  subagents.py  task_mode.py  tools.py
minicode/retrieval/: __init__.py  memory.py  ranking.py  schema.py  skill.py
minicode/skills/: __init__.py  catalog.py  loader.py  matching.py  prompt.py  ranker.py  retriever.py  router.py  schema.py
minicode/ui/: __init__.py  commands.py  render.py  repl.py
tests/: test_action_parser.py  test_actions.py  test_injection.py  test_policy.py  test_prompts.py  test_resume.py  test_runtime.py  test_security.py  test_session.py  test_skill_evolution.py  test_subagents.py  test_task_mode.py
